<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/edit_text_height"
        android:layout_marginRight="@dimen/edit_text_height"
        android:background="@drawable/premium_preview_shape_border"
        android:orientation="vertical"
        android:padding="5dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SemiDimGray" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_margin_horizontal"
                android:text="@string/login_to_your_account"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonClose"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_text_height"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:background="@drawable/button_red_selector"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="X"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

        </FrameLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="@color/caldroid_middle_gray"
		    android:orientation="vertical"
		    android:padding="@dimen/activity_margin_horizontal" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/session_expired"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/please_login_back"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/caldroid_middle_gray"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin_horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="160dp"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_margin_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bg_logo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="480dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/bg_login_text"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="480dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/bg_login_text"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_size_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/b_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/button_green_selector"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/show_password"
                        android:textColor="@color/caldroid_white"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageLoading"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_width"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_clock_dial"
        android:visibility="gone" />

</RelativeLayout>